# AdsUserbot

./: .env.sample  .gitignore  deploy.sh  pyproject.toml  shutdown.sh
src/: __main__.py  config.py  models.py
src/core/: __init__.py  bot.py  config.py  database.py  document.py  env.py
src/handlers/: __init__.py  ad_post.py  blacklist_urls.py
src/lib/: __init__.py  blacklist.py  urls.py
